fix:removido overflow desktop

--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,7 @@
     justify-content: space-between;
     margin: 3% 0 0 3%;
     width: 60%;
+    overflow: hidden;
   }
   .container--carrinho {
     width: 40%;
